# fastapi_app1

./: docker-compose.yml  pyproject.toml
api/cruds/: task.py
api/routers/: done.py  task.py
api/schemas/: task.py
tests/: test_main.py
